[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dart-mcp-kor"
version = "0.1.1"
description = "DART API를 활용한 재무 분석 MCP(Model-assisted Capability Package)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Geonhyup Lee", email = "geonhyup.lee@gmail.com" },
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dart-mcp = "dart_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dart_mcp"]
